--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
           </video>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle;">
-          <a href="https://follow-your-click.github.io/">
+          <a href="https://arxiv.org/abs/2406.01900">
             <span class="papertitle">Follow-Your-Emoji: Fine-Controllable and Expressive Freestyle Portrait Animation</span>
           </a>
           <br>
-          <a href="https://mayuelala.github.io/">Yue Ma</a>,
-          <a href="#">Hongyu Liu</a>, 
-          <a href="#">Hongfa Wang</a>, 
-          <a href="#">Heng Pan</a>, 
+          <a href="https://mayuelala.github.io/">Yue Ma<sup>*</sup>/a>,
+          <a href="#">Hongyu Liu<sup>*</sup></a>, 
+          <a href="#">Hongfa Wang<sup>*</sup></a>, 
+          <a href="#">Heng Pan<sup>*</sup></a>, 
           <strong>Yingqing He</strong>,
           <a href="#">Heng Pan</a>, 
           <a href="#">Junkun Yuan</a>, 
@@ -437,6 +437,7 @@
           <br>
           <a href="https://follow-your-emoji.github.io/">Project page</a> / 
           <a href="https://arxiv.org/abs/2406.01900">arXiv</a>
+          <a href="https://github.com/mayuelala/FollowYourEmoji">Github</a>
           <p></p>
           <p>
           </p>
