--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                   My research focuses are <strong>text-to-video generation, multimodal generation, and controllable generation</strong>.
                   <!-- I am also working at other AIGC-related research💖. -->
                 </p>
-                <p>
-                  Welcome to any types of research collaboration and discussions! 
-                </p>
+                
                 <p>Email: yhebm [at] connect [dot] ust [dot] hk</p>
                 <p style="text-align:center">
                   <a href="https://scholar.google.com/citations?user=UDiGYN8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
@@ -79,6 +77,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [03/2025] 1 paper was accepted to <font style="color: #D8429E">CVPR 2025</font>.<br> 
                 - [12/2024] 1 paper was accepted to <font style="color: #D8429E">AAAI 2025</font>.<br> 
                 - [10/2024] 1 paper was accepted to <font style="color: #D8429E">WACV 2025</font>.<br> 
                 - [08/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
@@ -239,7 +238,7 @@
             <a href="#">Renjie Pi</a>, 
             <a href="https://cqf.io/">Qifeng Chen<sup>&dagger;</sup></a>
             <br>
-            <em>arXiv</em>, 2024 Dec
+            <em>CVPR</em>, 2025
             <br>
             <a href="https://videodpo.github.io/">Project page</a> / 
             <a href="https://arxiv.org/abs/2412.14167">arXiv</a> / 
