--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [03/2025] 1 paper was accepted to <font style="color: #D8429E">AAAI 2026</font> as an <font style="color: #D8429E">Oral</font> paper.<br> 
                 - [03/2025] 1 paper was accepted to <font style="color: #D8429E">CVPR 2025</font>.<br> 
                 - [12/2024] 1 paper was accepted to <font style="color: #D8429E">AAAI 2025</font>.<br> 
                 - [10/2024] 1 paper was accepted to <font style="color: #D8429E">WACV 2025</font>.<br> 
