--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                - [03/2025] 1 paper was accepted to <font style="color: #D8429E">AAAI 2026</font> as an <font style="color: #D8429E">Oral</font> paper.<br> 
-                - [03/2025] 1 paper was accepted to <font style="color: #D8429E">CVPR 2025</font>.<br> 
+                - [11/2025] 1 paper was accepted to <font style="color: #D8429E">AAAI 2026</font> as an <font style="color: #D8429E">Oral</font> paper.<br>
+                - [09/2025] 2 paper was accepted to <font style="color: #D8429E">ICCV 2025</font>:<br> 
+                - [03/2025] 1 paper was accepted to <font style="color: #D8429E">CVPR 2025</font>:<br> 
                 - [12/2024] 1 paper was accepted to <font style="color: #D8429E">AAAI 2025</font>.<br> 
                 - [10/2024] 1 paper was accepted to <font style="color: #D8429E">WACV 2025</font>.<br> 
                 - [08/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
@@ -181,7 +182,7 @@
           <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN">Xiaowei Chi</a>, 
           <a href="https://cqf.io/">Qifeng Chen<sup>&dagger;</sup></a>
           <br>
-          <em>arXiv</em>, 2024 Dec
+          <em>ICCV 2025</em>
           <br>
           <a href="https://yzxing87.github.io/vae/">Project page</a> / 
           <a href="https://arxiv.org/abs/2412.17805">arXiv</a> / 
